--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = themes/er
 	url = git@github.com:NinoDui/er.git
 
+[submodule "public"]
+	path = public
+	url = git@github.com:NinoDui/NinoDui.github.io.git
